// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroupWrapper> should style correctly the radio group if it should be displayed horizontally 1`] = `
.c0 {
  border: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

<fieldset
  className="c0"
/>
`;

exports[`<RadioGroupWrapper> should style correctly the radio group if it should not be displayed horizontally 1`] = `
.c0 {
  border: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

<fieldset
  className="c0"
/>
`;
